--- a/src/components/card/style/card.module.scss
+++ b/src/components/card/style/card.module.scss
@@ -12,9 +12,9 @@
   background-color: var(--color-dark-60);
   border: 1px solid var(--color-dark-80);
   border-radius: 5px;
-  box-shadow: 1px 1px 2px rgb(0 0 0 / 10%),
-  -1px -1px 2px rgb(0 0 0 / 10%);
-
+  box-shadow:
+    1px 1px 2px rgb(0 0 0 / 10%),
+    -1px -1px 2px rgb(0 0 0 / 10%);
 
   min-height: max-content;
 }
